# ghgrab

./: .gitignore  Cargo.toml  PKGBUILD  README.md  flake.nix  package.json  pyproject.toml  setup.py
.github/: FUNDING.yml
.github/workflows/: build.yml  ci.yml
docs/: Makefile  agent-skill.md  commands.md  conf.py  configuration.md  contributing.md  development.md  index.rst  installation.md  overview.md  quickstart.md  requirements.txt  theming.md
docs/_static/: custom.css
examples/: theme.toml
src/: agent.rs  cli.rs  config.rs  download.rs  github.rs  lib.rs  main.rs  release.rs
src/ui/: mod.rs  theme.rs
src/ui/components/: browser.rs  input.rs  mod.rs  preview.rs  repo_search.rs  searching.rs  syntax_highlighting.rs  toast.rs
tests/: agent_cli_test.rs  app_state_test.rs  release_test.rs
